syntax = "proto3";

package api;

option go_package = "dzhordano/132market/services/sso/internal/interface/api/grpc/pb/validtion_v1;validation_v1";

service ValidationV1 {
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
}